--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
             <div class="titulo" id="titulo"></div>
         </header>
         <main>
-            <div class="sobre-mi">
-                <div class="sobre-mi-2" id="sobre-mi"></div>
-                <img src="/imagenes/psicologa.jpg" alt="Foto psicóloga" width="300px">
-            </div>
+            <div class="sobre-mi" id="sobre-mi"></div>
             <div class="container-tabla">
                 <h3>Mi propuesta</h3>
                 <div class="tabla" id="tabla"></div>
@@ -28,16 +25,7 @@
             <div class="container-tecnicas" id="container-tecnicas"></div>
             <div class="container-reseñas">
                 <h3>Testimonios</h3>
-                <div class="reseñas">
-                    <img src="/imagenes/comentarios/Adriano Pantalone.png" alt="Reseña de google">
-                    <img src="/imagenes/comentarios/Florencia Monzon.png" alt="Reseña de google">
-                    <img src=" /imagenes/comentarios/Gonzalo Zolla.png" alt="Reseña de google">
-                </div>
-                <div class=" reseñas">
-                    <img src="/imagenes/comentarios/Lorena Finollo.png" alt="Reseña de google">
-                    <img src=" /imagenes/comentarios/Rodrigo Sarmiento.png" alt="Reseña de google">
-                    <img src=" /imagenes/comentarios/Vale Ceballos.png" alt="Reseña de google">
-                </div>
+                <div class="reseñas" id="testimonios"></div>
             </div>
         </main>
         <footer>
